# python_depends

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
docs/: async_example.py  many_dependencies.py  nested dependencies.py  sample_example.py  sync_and_async_deps.py
docs/db_session_example/: db.py  main.py  repository.py
python_depends/: __init__.py  depends.py  utils.py
